tests/test164.rael.exp
Error [tests/test164.rael:2:12]: Expected a block
|     with -2
|            ^
